# JNA-CMAKE-MAVEN

./: .gitignore  .gitignore.swp  CMakeLists.txt  assembly.xml  pom.xml
src/main/cpp/: jna.cpp  jna.cxx
src/main/java/: .JNASample.java.swp  JNASample.java
src/main/java/com/jhosua/: JNASample.java  JnaInterface.java
